2010-09-27  Mike Frysinger  <vapier@gentoo.org>

  * data/analog/bf533/bf533: Drop brackets from ADDR and DATA signals to match
    the style of all other Blackfin parts.
  * src/bus/bf533_stamp.c (bf533_stamp_bus_new): Update signal names.
  * src/bus/bf537_stamp.c (bf537_stamp_bus_new): Likewise.

  * data/analog/bf548/bf548: Change "PORTX_#" to "PX#" signals to match the
    style of all other Blackfin parts.
  * src/bus/bf548_ezkit.c (bf548_ezkit_bus_new): Update signal names.

  * configure.ac: Change to newer libtool macro (LT_INIT) to avoid warnings.
  * acinclude.m4: Redirect LT_INIT to AC_PROG_LIBTOOL for older libtools.

  * include/urjtag/bitops.h: New generic bit operations by Michael Walle.
  * include/urjtag/Makefile.am (pkginclude_HEADERS): Add bitops.h

  * include/urjtag/data_register.h, src/part/data_register.c
    (urj_part_data_register_realloc): New func by Michael Walle for resizing
    registers on the fly.
  * include/urjtag/tap_register.h, src/tap/register.c
    (urj_tap_register_realloc): Likewise.

  * include/urjtag/Makefile.am, include/urjtag/pld.h, include/urjtag/error.h,
    src/Makefile.am, src/pld/Makefile.am, src/pld/pld.c, src/pld/xilinx.h,
    src/pld/xilinx.c, src/pld/xilinx_bitstream.c,
    src/cmd/Makefile.am, src/cmd/cmd_pld.c, src/cmd/cmd_list.h,
    doc/Makefile.am, doc/README.pld, src/global/log-error.c, configure.ac:
    New Programmable Logic Devices (PLD) subsystem by Michael Walle.

  * extra/fjmem/fjmem_config_pack_spartan6-p.vhd, extra/fjmem/fjmem_spartan6.vhd:
    Add fjmem example for Spartan-6 devices.

  * data/xilinx/<a lot of files>: Add jtag files for Xilinx devices by Michael
    Walle.  This covers the Spartan-3, Spartan-6, Virtex-4, System ACE,
    Platform flash, and XC9500XL families.

  * src/bus/bf518f_ezbrd.c, src/bus/bf548_ezkit.c, data/analog/bf518/bf518,
    data/analog/bf548/bf548: Change AMS signal names to match the style of all
    other Blackfin parts.
