@@ -1,3 +1,8 @@
+2010-09-28  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/flash/amd_flash.c (urj_flash_amd_detect): Move the bus address range
+    checks up to before we actually attempt to read/write the bus.
+
 2010-09-27  Mike Frysinger  <vapier@gentoo.org>
 
   * data/analog/bf533/bf533: Drop brackets from ADDR and DATA signals to match
